--- a/feb12.ipynb
+++ b/feb12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ff05d9be-0153-4235-afe3-ddf05578ed71",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dfb981d3-0e0e-4080-937b-20f07863b9c6",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4a1ae1f5-6bd6-4f70-b923-b78b0e5ddee0",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "67fd92d0-ea1d-4d48-b15d-962992060e67",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7e9311b4-a1a6-48c6-b4d0-437c3448a971",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ff36878b-8a5d-4054-85f2-4d3f1aaef891",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2f0d799f-564f-496a-bddc-bb92e46f519c",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7f5ae34e-9e9a-4227-9ce9-467d3a9642b9",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1f94c0de-122b-435b-939f-7650bc25f1cf",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f4eabcf2-0510-45e5-8df4-5e57239ab1a9",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "591f1502-76a1-47ae-a9c2-62c1b5f5008c",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b8687b22-19eb-423e-a56d-b9326847169e",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "54caec60-7b20-4c65-8aa7-44803e4df160",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "eb92fe7e-b7b6-4913-8d5c-ef5ef95335f7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6e0fa433-ac47-4e18-a352-8134d1b611f2",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "dbb55b28-1240-4b59-98f5-072e5413a5c1",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f59141c3-80bc-456a-885e-cd26941402e8",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "['apple', 5, 2.6]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "c64b2237-9eeb-46ee-9b1b-391ba5e26946",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "['apple', 5, 2.6, 'banana']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "1d86a187-53da-4f82-bce7-153af5a525d8",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
        "['apple', 'Tom', 5, 2.6, 'banana']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "3f81bb19-c370-41f9-b1fe-d97bfcc0901a",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "322d2df5-5f4f-47ed-8679-83aba1ae785b",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
        "['apple', 'Tom', 5, 2.6, 'banana', 'Jerry']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "964c91d0-7f12-4fa3-b22d-1010b4ba5832",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        "['apple', 'Tom', 5, 2.6, 'banana']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "bc7c5c68-8665-4a12-9c9e-cef41c1470d9",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "['apple', 'Tom', 2.6, 'banana']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "4f174e01-b722-41e4-87ea-be1c13522f05",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "[2, 5, 7, 7, 8, 14, 28, 32, 45, 47, 82]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "cb21e252-73a6-429b-a1ad-5b3949482960",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "2"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "bf4a79c4-4a2a-462a-94be-ff4e9d29bc08",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
        " 'sort']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "f295517d-2c91-4dca-b089-823013716762",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "[82, 47, 45, 32, 28, 14, 8, 7, 7, 5, 2]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "4803fa12-9114-4c06-924f-2f578a82334c",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "12ca94aa-9917-40fe-8547-eed53e3b20c2",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "[]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "571f4c20-5f9e-4db6-9c0d-44fdaa0c76b0",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
        "[1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,10 +635,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "f30a257f-5d83-4933-ba9b-c651a4e1d3c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1': 'Adam', '2': 'Amit', '3': 'Jerry'}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "students = {'1':\"Adam\", '2':\"Amit\", '3':\"Jerry\"}\n",
     "students"
@@ -646,47 +657,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "afcceffe-086b-433b-b807-84fda5d8efe0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['1', '2', '3'])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "students.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "bd09f1fd-ed23-4986-b8b7-138c17d1bdbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['Adam', 'Amit', 'Jerry'])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "students.values()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "1469ccc0-f035-404f-b68d-cb9515aff268",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1': 'Adam', '2': 'Anup', '3': 'Jerry'}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "students['2']=\"Anup\"\n",
     "students"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "855e5b37-ea1b-48c5-82d2-cc0250cc03d2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
