--- a/feb13.ipynb
+++ b/feb13.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e3dd8d07-46a4-40c3-aaa8-4d2370d18ade",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "'dlrow olleH'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "05b8d421-00d5-4428-b215-f6d142af8293",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "8c55e84d-8c25-4e8a-a6d2-d7e7372d07c1",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0fd56041-7db3-4f9d-8224-5313f24b71d0",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "423a74be-50e1-4c62-8386-8441e9ad3318",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f08554ef-3065-4cfa-b848-f99ab26e5061",
    "metadata": {},
    "outputs": [
@@ -144,15 +144,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b2a3"
+      "a3b2"
      ]
     }
    ],
    "source": [
     "word=\"aaabb\"\n",
-    "a = set(word)\n",
-    "for i in a:\n",
-    "    print(f'{i}{word.count(i)}',end=\"\") "
+    "a = {}\n",
+    "for ele in word:\n",
+    "    a[ele]=a.get(ele,0)+1\n",
+    "for k,v in a.items():\n",
+    "    print(f'{k}{v}',end=\"\") "
    ]
   },
   {
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "c77a0485-8c36-4c6c-a0e7-e80267376dd4",
    "metadata": {},
    "outputs": [
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "6284e1b4-423d-4488-809a-5c80c69b9278",
    "metadata": {},
    "outputs": [
@@ -208,8 +210,8 @@
     "res=[]\n",
     "for ele in l:\n",
     "    d[ele]=d.get(ele,0)+1\n",
-    "for i in d:\n",
-    "    d[i]=1\n",
+    "# for i in d:\n",
+    "#     d[i]=1\n",
     "for ele in d:\n",
     "    res.append(ele)\n",
     "print(res)"
@@ -218,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
