--- a/feb14.ipynb
+++ b/feb14.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ae59f540-8d28-400b-9d08-89b0a637f188",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4]\n"
+      "[dict_keys([1, 2, 3, 4])]\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
     "    dict[i]=1\n",
     "for ele in dict:\n",
     "    res.append(ele)\n",
-    "print(res) "
+    "print(res)\n"
    ]
   },
   {
@@ -261,16 +261,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "70e01a60-4517-478c-a6a2-55c1f61a6f11",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1], [1, 2], [1, 2, 3], [2], [2, 3], [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3]\n",
+    "res=[]\n",
+    "for i in range(len(l)):\n",
+    "    for j in range(i,len(l)):\n",
+    "        res.append(l[i:j+1])\n",
+    "print(res)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
