--- a/feb21.ipynb
+++ b/feb21.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "3b3fb772-c6bf-4e91-acd3-6f1eea4d37e2",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
     "    for ele in l:\n",
     "        sum += ele\n",
     "    if sum == n:\n",
-    "        return num\n",
+    "        return n\n",
     "            \n",
     "    \n",
     "for num in range (1, n+1):\n",
@@ -191,16 +191,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7b516fda-97e0-4455-9fc4-e8a09e108745",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a'] ['f', 'i'] ['b', 'c', 'e'] "
+     ]
+    }
+   ],
+   "source": [
+    "l=['a', 'b', 'c', 'e', 'f', 'a', 'f', 'a', 'i', 'i'] \n",
+    "freq = [[] for i in range(len(l)+1)]\n",
+    "\n",
+    "count = {}\n",
+    "for ele in l:\n",
+    "    count[ele]=count.get(ele, 0)+1\n",
+    "\n",
+    "for num, cnt in count.items():\n",
+    "    freq[cnt].append(num)\n",
+    "\n",
+    "for ele in freq[::-1]:\n",
+    "    if len(ele)>0:\n",
+    "        print(ele, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0f2e7a9",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
