--- a/feb27.ipynb
+++ b/feb27.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "38233cc1-084f-4f5b-8ff0-ed17f6054a04",
    "metadata": {},
    "outputs": [
@@ -31,11 +31,9 @@
    ],
    "source": [
     "d={'I':1, 'V':5, 'X': 10, 'L':50}\n",
-    "l\n",
     "roman = input(\"Roman :\")\n",
     "number = 0\n",
     "prev = 0\n",
-    "index = -1\n",
     "for ele in reversed(roman):\n",
     "    cur = d[ele] \n",
     "    if cur < prev:\n",
@@ -56,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d85cb509-f9d9-4aa2-92c1-f36f956e7ed8",
    "metadata": {},
    "outputs": [
@@ -64,21 +62,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1], [1, 2], [1, 2, 3], [1, 2, 3, 4], [2], [2, 3], [2, 3, 4], [3], [3, 4], [4]]\n"
+      "[[1, 2, 3, 4], [1, 2, 3], [1, 2, 4], [1, 2], [1, 3, 4], [1, 3], [1, 4], [1], [2, 3, 4], [2, 3], [2, 4], [2], [3, 4], [3], [4], []]\n"
      ]
     }
    ],
    "source": [
     "a = {1,2,3,4}\n",
-    "s = list(a)\n",
-    "def sub_string(s):\n",
-    "    sub = []\n",
-    "    for i in range(len(s)):\n",
-    "        for j in range(i, len(s)):\n",
-    "            #print(i,j)\n",
-    "            sub.append(s[i:j+1])\n",
-    "    return sub\n",
-    "print(sub_string(s))"
+    "s = sorted(a)\n",
+    "def subsets(s):\n",
+    "    subset = []\n",
+    "    result = []\n",
+    "\n",
+    "    def dfs(i):\n",
+    "        if i>= len(s):\n",
+    "            result.append(subset[:])\n",
+    "            return\n",
+    "        subset.append(s[i])\n",
+    "        dfs(i+1)\n",
+    "        subset.pop()\n",
+    "        dfs(i+1)\n",
+    "    dfs(0)\n",
+    "    return result\n",
+    "print(subsets(s))"
    ]
   },
   {
@@ -159,7 +164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
