--- a/feb17.ipynb
+++ b/feb17.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "2cffaa99-c557-4b45-a813-1d448cdb56aa",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "c82f0fde-9777-43f5-a098-935953c1b413",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 10, 11]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
