--- a/mar3.ipynb
+++ b/mar3.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "270ac2a5-268e-47e5-90f4-ac5289ac31b3",
    "metadata": {},
    "outputs": [
@@ -50,19 +50,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "32 is a power of two.\n"
      ]
     }
    ],
    "source": [
-    "def power_two(n):\n",
-    "    if n==1 or n==2:\n",
-    "        return True\n",
-    "    if n%2 == 0:\n",
-    "        return power_two(n//2)\n",
-    "    return False\n",
-    "n=16\n",
-    "print(power_two(n))"
+    "def is_power_of_two(n):\n",
+    "    if n <= 0:\n",
+    "        return False\n",
+    "    return (n & (n - 1)) == 0\n",
+    "\n",
+    "# Example Usage\n",
+    "number = 32\n",
+    "if is_power_of_two(number):\n",
+    "    print(f\"{number} is a power of two.\")\n",
+    "else:\n",
+    "    print(f\"{number} is not a power of two.\")"
    ]
   },
   {
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "b141948b-a0c0-4e11-8bb1-b412c852a200",
    "metadata": {},
    "outputs": [
